# oxDNA

./: .cproject  .gitignore  .project  CHANGELOG  CMakeLists.txt  CMakePresets.json  Makefile.old  README  README.md  TODO  average_seq_with_mm.txt  breaking_changes.md  changing_to_c++14.md  configurations.html  events.html  ffs.html  forces.html  genindex.html  hybrid_sequence_dependent_parameters.txt  index.html  input.html  input_options.md  install.html  objects.inv  observables.html  oxDNA3_sequence_dependent_parameters.txt  oxDNA3_sequence_dependent_parameters_270126.txt  oxDNA3_sequence_dependent_parameters_basestep.txt  performance.html  pre-commit  py-modindex.html  pyproject.toml  relaxation.html  scaling.html  search.html  searchindex.js  select_compute_arch.cmake  sequence_dependent_parameters_with_mm.txt  setup.py  umbrella_sampling.html  (+2 more)
analysis/: CMakeLists.txt  MANIFEST.in  README.md  oat-completion.sh  pyproject.toml  setup.cfg  setup.py
analysis/example_input_files/: README.md  input_relax_MC  input_relax_MD  input_run
analysis/paper_examples/: README.md
analysis/tests/: angles.txt  centroid.dat.pyidx  cleanup.sh  cluster_data.json  conftest.py  contact_map.pkl.npy  devs.json  devsM.json  devs_rmsd_data.json  energy_BEXC.json  energy_CRSTCK.json  energy_CXSTCK.json  energy_DH.json  energy_FENE.json  energy_HB.json  energy_NEXC.json  energy_STCK.json  energy_total.json  forces.txt  gen_pairs.txt  index.txt  input_rna  mean.dat.pyidx  meanM  pairs.txt  pca0.json  sub.dat.top  test.sh  test_oxpy.py
contrib/: CMakeLists.txt
contrib/evans/: CMakeLists.txt
contrib/randisi/: CMakeLists.txt  oxDNA_writhe.py
contrib/romano/: CMakeLists.txt
contrib/rovigatti/: CMakeLists.txt  CUDAFSInteraction.cu  CUDAFSInteraction.h  CUDANathanStarInteraction.cu  CUDANathanStarInteraction.h  CUDAStarrInteraction.cu  CUDAStarrInteraction.h  CUDAmWInteraction.cu  ConstructwiseBonds.cpp  DiblockComs.cpp  DiblockComs.h  DiblockGr.cpp  DiblockGr.h  EmptyVolume.cpp  EmptyVolume.h  FSConf.cpp  FSConf.h  FSInteraction.cpp  FSInteraction.h  GrByInsertion.cpp  GrByInsertion.h  GraftedInteraction.cpp  GraftedInteraction.h  Gyradius.cpp  Gyradius.h  ManfredoInteraction.cpp  ManfredoInteraction.h  NathanInteraction.cpp  NathanInteraction.h  NathanNeighs.cpp  NathanNeighs.h  NathanStarInteraction.cpp  NathanStarInteraction.h  PatchyHSC.cpp  PatchyHSC.h  PatchyToMgl.cpp  PatchyToMgl.h  StarrConf.cpp  StarrInteraction.cpp  StarrInteraction.h  (+9 more)
contrib/tostiguerra/: CMakeLists.txt
oxDNA/: CHANGELOG  CMakeLists.txt  README  TODO  oxDNA2_average_sequence_parameters.txt  select_compute_arch.cmake
oxDNA/DOCS/: Doxyfile_UTILS  Doxyfile_oxDNA  coding_guidelines.txt  input_options.txt  vectors-xxx.nb
oxDNA/EXAMPLES/: inputMC
oxDNA/TEST/: BaseTest.py  BuildTest.sh  README  RUNNER_LIST  RUNNER_LIST_BUILD  RUNNER_LIST_SCIENTIFIC  RunTest.py  ScientificTest.sh
oxDNA/TEST_LR/: TestSuite.py  howto.txt  test_folder_list.txt
oxDNA/UTILS/: SantaLucia.py  TEPtraj2xyz.py  base.py  cadnano_interface.py  cullTraj.py  dist.py  extension.py  generate.py  order_parameters.py  origami_utils.py  output_bonds.py  parse_options.py  self.py  test.sqs  traj2tcl-detailed.py
oxDNA/src/: CMakeLists.txt  DNAnalysis.cpp  confGenerator.cpp  defs.h  model.h  oxDNA.cpp  oxDNA_mpi.cpp
oxpy/: CMakeLists.txt  InputGenerator.py  OxpyContext.cpp  OxpyContext.h  OxpyManager.cpp  OxpyManager.h  __init__.py  __version__.py  bindings.cpp  index.html  make_install_setup.py  python_defs.h  setup.py  utils.py  vector_matrix_casters.h
oxpy/bindings_includes/: AnalysisBackend.h  BaseBox.h  BaseForce.h  BaseInteraction.h  BaseObservable.h  BaseParticle.h  ConfigInfo.h  DNANucleotide.h  IBaseInteraction.h  Molecule.h  RNANucleotide.h  input_file.h
oxpy/build_docs/: Makefile  conf.py  index.md  requirements.txt
oxpy/docs/: Makefile  conf.py
oxpy/extending/: forces.html  observables.html
oxpy/modules/: analysis.html  utils.html
src/: CMakeLists.txt  DNAnalysis.cpp  about_masses.txt  confGenerator.cpp  defs.h  model.h  oxDNA.cpp  oxDNA_mpi.cpp
src/Backends/: AnalysisBackend.cpp  AnalysisBackend.h  BackendFactory.cpp  BackendFactory.h  FFS_MD_CPUBackend.cpp  FFS_MD_CPUBackend.h  FIREBackend.cpp  FIREBackend.h  MCBackend.cpp  MCBackend.h  MC_CPUBackend.cpp  MC_CPUBackend.h  MC_CPUBackend2.cpp  MC_CPUBackend2.h  MDBackend.cpp  MDBackend.h  MD_CPUBackend.cpp  MD_CPUBackend.h  MD_MPIBackend.cpp  MD_MPIBackend.h  MinBackend.cpp  MinBackend.h  PT_VMMC_CPUBackend.cpp  PT_VMMC_CPUBackend.h  SimBackend.cpp  SimBackend.h  VMMC_CPUBackend.cpp  VMMC_CPUBackend.h
src/Boxes/: BaseBox.cpp  BaseBox.h  BoxFactory.cpp  BoxFactory.h  CubicBox.cpp  CubicBox.h  LeesEdwardsCubicBox.cpp  LeesEdwardsCubicBox.h  OrthogonalBox.cpp  OrthogonalBox.h
src/CUDA/: CUDAForces.h  CUDAUtils.cu  CUDAUtils.h  CUDA_base_interactions.h  CUDA_rand.cu  CUDA_rand.cuh  CUDA_sort.cu  CUDA_sort.cuh  cuda_defs.h
src/Forces/: AlignmentField.cpp  AlignmentField.h  AttractionPlane.cpp  AttractionPlane.h  BaseForce.cpp  BaseForce.h  CCMV.cpp  CCMV.h  COMForce.cpp  COMForce.h  ConstantRateForce.cpp  ConstantRateForce.h  ConstantRateTorque.cpp  ConstantRateTorque.h  ConstantTrap.cpp  ConstantTrap.h  ExternalForce.cpp  ForceFactory.cpp  ForceFactory.h  GenericCentralForce.cpp  GenericCentralForce.h  HardWall.cpp  HardWall.h  LJCone.cpp  LJCone.h  LJWall.cpp  LJWall.h  LowdimMovingTrap.cpp  LowdimMovingTrap.h  Morse.cpp  Morse.h  MovingTrap.cpp  MovingTrap.h  MutualTrap.cpp  MutualTrap.h  RepulsionPlane.cpp  RepulsionPlane.h  RepulsionPlaneMoving.cpp  RepulsionPlaneMoving.h  RepulsiveEllipse.cpp  (+17 more)
src/Interactions/: ANMInteraction.cpp  ANMInteraction.h  BaseInteraction.cpp  BaseInteraction.h  BoxInteraction.cpp  BoxInteraction.h  CCG2Interaction.cpp  CCG2Interaction.h  CCGInteraction.cpp  CCGInteraction.h  CGDNAInteraction.cpp  CGDNAInteraction.h  CustomInteraction.cpp  CustomInteraction.h  DHSInteraction.cpp  DHSInteraction.h  DNA2Interaction.cpp  DNA2Interaction.h  DNA2SDInteraction.cpp  DNA2SDInteraction.h  DNA2withRNA2Interaction.cpp  DNA2withRNA2Interaction.h  (+82 more)
(+3797 files in other folders)
