[build-system]
requires = ["scikit-build-core", "numpy", "setuptools_scm"]
build-backend = "scikit_build_core.build"

[project]
name = "oxpy"
dynamic = ["version", "dependencies"]
description = "A code primarily aimed at DNA and RNA coarse-grained simulations"
readme = "README.md"
authors = [
    {name = "Lorenzo Rovigatti", email = "lorenzo.rovigatti@uniroma1.it"},
    {name = "Flavio Romano", email = "flavio.romano@unive.it"},
    {name = "Petr Šulc", email = "psulc@asu.edu"}
]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
homepage = "https://github.com/lorenzo-rovigatti/oxDNA"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["oxpy"]

[tool.scikit-build.cmake]
args = [
  "-DPython=ON",
]

[tool.setuptools_scm]
version_file = "src/oxpy/_version.py"
fallback_version = "3.7"
local_scheme = "no-local-version"
