IF(Python)
	if(OxpyVersionOverride)
		message(STATUS "OxpyVersionOverride is ON: skipping oxDNA_analysis_tools (requires Python >= 3.11)")
	else()
		# Install oxDNA_analysis_tools using the user's default Python (already validated >= 3.11 by src/oxpy/)
		if(OxpySystemInstall)
			install(CODE "message(STATUS \"Installing oxDNA_analysis_tools system-wide via pip...\")
						execute_process(COMMAND ${Python_EXECUTABLE} -m pip install ${CMAKE_CURRENT_SOURCE_DIR})")
		else()
			install(CODE "message(STATUS \"Installing oxDNA_analysis_tools for current user via pip...\")
						execute_process(COMMAND ${Python_EXECUTABLE} -m pip install --user ${CMAKE_CURRENT_SOURCE_DIR})")
		endif()
	endif()
ENDIF(Python)
