INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

FILE(GLOB_RECURSE entries LIST_DIRECTORIES true RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*")

FOREACH(entry ${entries})
	IF(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${entry} AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${entry}/CMakeLists.txt)
		MESSAGE(STATUS "Adding the targets found in the ${CMAKE_CURRENT_SOURCE_DIR}/${entry} folder")
		ADD_SUBDIRECTORY(${entry})
	ENDIF()
ENDFOREACH()
